--- a/index.html
+++ b/index.html
@@ -12,26 +12,29 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script type="module" src="./scripts/main.js" defer></script>
   </head>
   <body>
     <header>
       <div class="container">
-        <div class="logo-lang">
-          <img src="./images/Logo.png" alt="logo" />
-          <a href="#">Eng</a><a class="active" href="#">Рус</a>
-        </div>
-        <div class="nav-help">
-          <a class="nav-menu" href="#"></a>
-          <nav>
-            <ul>
-              <li><a href="#">О нас</a></li>
-              <li><a href="#">Туры</a></li>
-              <li><a href="#">Визы</a></li>
-              <li><a href="#">Агентам</a></li>
-              <li><a href="#">Контакты</a></li>
-            </ul>
-          </nav>
-          <button>Помощь</button>
+        <div class="header-wrapper">
+          <div class="logo-lang">
+            <img src="./images/Logo.png" alt="logo" />
+            <a href="#">Eng</a><a class="active" href="#">Рус</a>
+          </div>
+          <div class="nav-help">
+            <a class="nav-menu"></a>
+            <nav>
+              <ul class="nav-list">
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Туры</a></li>
+                <li><a href="#">Визы</a></li>
+                <li><a href="#">Агентам</a></li>
+                <li><a href="#">Контакты</a></li>
+              </ul>
+            </nav>
+            <button>Помощь</button>
+          </div>
         </div>
       </div>
     </header>
@@ -71,7 +74,7 @@
           </div>
           <div class="greeting__why-us">
             <h2>Почему именно мы</h2>
-            <div class="greting__why-us-cards-wrapper">
+            <div class="greeting__why-us-cards-wrapper">
               <div class="greeting__why-us-card">
                 <img src="./images/visa.svg" alt="Визовая поддержка клиентов" />
                 <p>Визовая поддержка клиентов</p>
@@ -300,9 +303,9 @@
                   />
                 </div>
                 <div class="blog__people-card-info">
-                  <h3>Лайфхаки успешно- го путешествия по Норвегии</h3>
+                  <h3>Лайфхаки успешного путешествия по Норвегии</h3>
                   <p class="blog__people-card-info-text">
-                    Норвегия — пожалуй, лучшая страна для приключенчес- кого
+                    Норвегия — пожалуй, лучшая страна для приключенческого
                     туризма в Европе. Здесь есть все: горы для альпинистов..
                   </p>
                   <div class="blog__date-reaction">
@@ -327,49 +330,53 @@
       </section>
       <section class="feedback">
         <div class="container">
-        <h2>Отзывы наших клиентов</h2>
-        <img src="./images/feedback.png" alt="feedback" />
-        <p class="feedback__text">
-          Спасибо, что даете почувствовать себя сводобными! Ходили дважды, и
-          каждый раз заряжались энергией на год вперед. Отдельное спасибо гиду
-          Михаилу!
-        </p>
-        <p class="feedback__name">София</p>
-        <div class="feedback__switch">
-          <button></button>
-          <button></button>
-          <button></button>
+          <h2>Отзывы наших клиентов</h2>
+          <img src="./images/feedback.png" alt="feedback" />
+          <p class="feedback__text">
+            Спасибо, что даете почувствовать себя сводобными! Ходили дважды, и
+            каждый раз заряжались энергией на год вперед. Отдельное спасибо гиду
+            Михаилу!
+          </p>
+          <p class="feedback__name">София</p>
+          <div class="feedback__switch">
+            <button></button>
+            <button></button>
+            <button></button>
+          </div>
         </div>
-      </div>
       </section>
     </main>
     <footer>
       <div class="container">
-        <div class="mail-adress">
-        <div class="mail">
-          <p>E-mail</p>
-          <a href="mailto:wildvacation@gmail.com">wildvacation@gmail.com</a>
-        </div>
-        <div class="adress">
-          <p>Адрес</p>
-          <a href="#">Немига 5а, офис 18,  Минск</a>
-        </div>
-      </div>
-        <div class="phone">
-          <p>Телефоны</p>
-          <div class="phone-numbers">
-          <a href="tel:+375338884422">+375 33 888-44-22</a>
-          <a href="tel:+375299638521">+375 29 963-85-21</a>
-        </div>
-        </div>
-        <div class="social-nw">
-          <p>Мы в соцсетях</p>
-          <div class="social-nw-logo">
-          <a href="#"><img src="./images/instagram.svg" alt="instagram"></a>
-          <a href="#"><img src="./images/vk.svg" alt="vk"></a>
-          <a href="#"><img src="./images/twitter.svg" alt="twitter"></a>
-          <a href="#"><img src="./images/facebook.svg" alt="facebook"></a>
-        </div>
+        <div class="contacts-wrapper">
+          <div class="mail-adress">
+            <div class="mail">
+              <p>E-mail</p>
+              <a href="mailto:wildvacation@gmail.com">wildvacation@gmail.com</a>
+            </div>
+            <div class="adress">
+              <p>Адрес</p>
+              <a href="#">Немига 5а, офис 18, Минск</a>
+            </div>
+          </div>
+          <div class="phone">
+            <p>Телефоны</p>
+            <div class="phone-numbers">
+              <a href="tel:+375338884422">+375 33 888-44-22</a>
+              <a href="tel:+375299638521">+375 29 963-85-21</a>
+            </div>
+          </div>
+          <div class="social-media">
+            <p>Мы в соцсетях</p>
+            <div class="social-media-logo">
+              <a href="#"
+                ><img src="./images/instagram.svg" alt="instagram"
+              /></a>
+              <a href="#"><img src="./images/vk.svg" alt="vk" /></a>
+              <a href="#"><img src="./images/twitter.svg" alt="twitter" /></a>
+              <a href="#"><img src="./images/facebook.svg" alt="facebook" /></a>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
